fixed meet student video visibility on landscape

--- a/assets-src/sass/components/_comp-section.scss
+++ b/assets-src/sass/components/_comp-section.scss
@@ -2165,3 +2165,16 @@
 
 	}
 }
+.section-meet-students {
+	.section-content {
+		@include break-point(tablet) {
+			flex-direction: column;
+			height: 100%;
+		}
+		@include break-point(laptop) {
+			flex-direction: row;
+			height: auto;
+		}
+	}
+
+}
